<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AccountActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="Username"
        app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Title"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/account_layout_contenitore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <RelativeLayout
                    android:id="@+id/account_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/account_img_profilo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_launcher_background"
                        tools:layout_editor_absoluteX="26dp"
                        tools:layout_editor_absoluteY="16dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/account_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Username"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/account_nome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Nome"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/account_descrizione"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Description"
                            android:textColor="@android:color/black"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/account_sito"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Site"
                            android:textColor="@android:color/holo_blue_light"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/account_pff_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/account_contorno_post"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="3dp"
                            android:text="@string/account_post"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/account_n_post"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="3dp"
                            android:text="0"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/account_contorno_followers"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="3dp"
                            android:text="@string/account_followers"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/account_n_followers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="3dp"
                            android:text="0"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/account_contorno_followings"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="3dp"
                            android:text="@string/account_followings"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/account_n_followings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="3dp"
                            android:text="0"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/account_private_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="50dp">

                    <TextView
                        android:id="@+id/account_private_text1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Questo account è privato"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/account_private_text2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Segui per vedere le foto e i video."
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/account_layout_post_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"></LinearLayout>

                <Button
                    android:id="@+id/account_load_more_post_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/plus_button"
                    android:onClick="loadMorePreviewPosts"
                    android:text="+" />

                <ProgressBar
                    android:id="@+id/account_loading"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="1200dp"
        android:visibility="visible">

    </WebView>

</LinearLayout>